src/Components/Navbar/navbar.css
/* navbar */
/* The animation code */
@keyframes openMenu {
    from {top:-100px}
    to {top: 100px}
  }

  @keyframes closeMenu {
    from {top:100px}
    to {top: -110px}
  }


@media (max-width: 850px) {
    .nav-button{
        height:45px;
        width:75px !important;
    }
    .nav-button-login{
        height:45px;
        width:58px !important;
    }
    
    ul.nav-links{
        display: none;
    }
    
    div.sign-buttons{
        flex:1;
        justify-content: end;
        /* display: none;
        width: 200px; */
    }

    nav .toggler{
        display: none;
    }
    
    li{
        padding-left: 10px;
        padding-right: 10px;
    }
}

@media (min-width: 850px) {
    div.hamb-menu{
        display: none !important;
    }
    div.navbar .hamb-menu-icon{
        display: none !important;
    }
}


.MuiTooltip-tooltip{
    background-color: var(--primary-dark) !important;
    border: 1px solid white;
}

.MuiTooltip-arrow{
    color: var(--primary-dark) !important;
}

.MuiSwitch-thumb{
    background-color: var(--primary-text) !important;
}

.MuiSwitch-thumb:hover{
    background-color: var(--primary-light) !important;
}


span.hamb-menu {
    display: none;
    padding:10px;
    cursor: pointer;
}

span.hamb-menu i.bi{
    font-size: x-large;
}

/* Hamburger Menu flexed */
div.hamb-menu{
    display: none;
    z-index: 1;
    margin: 6px;
    position: absolute;
    align-items: center;
    width: -webkit-fill-available;
    border-radius: 10px;
    padding-left: 35px;
    padding-right: 35px;
    justify-content: space-between;
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: var(--primary-light);
    animation-name: openMenu;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    animation-duration: 0.5s;
}

 .closeMenu{
    animation-name: closeMenu !important;
    
}

 div.nav-links-hamb{
    display:flex;
    flex-direction: column;
    row-gap: 10px;
    justify-content: space-between;
    list-style-type: none;
    color: inherit;
}

div.nav-links-hamb li .bt-nav-link:hover {
    background-color:var(--primary-color);
}

div.nav-links-hamb a.nav-link:hover{
    color: white;
}

 div.sign-buttons-hamb{
    display:flex;
    justify-content: space-between;
    align-items: center;
}

div.navbar .hamb-menu-icon{
    font-size: 40px;
    padding-left: 5px;
}

div.navbar{
    
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    position:relative;
    height: 85px;
    color: #2B283A;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    padding-left: 20px;
    padding-right: 20px;
    background-color:white;
    z-index: 2;
}

div.navbar .nav-brand{
    
    color: var(--secondary-color);
    font-weight:bolder !important;
    font-size: 25px;
    text-decoration: none;
    padding: 0.5rem;
    

    transition: all .1s ease-in-out;
    /* border: 1px solid transparent; */
}

div.navbar .nav-brand:hover{
    /* box-shadow: rgba(0, 0, 0, 0.308) 0px 8px 13px; */
    text-shadow: -1px 2px 2px rgba(79, 78, 78, 0.3);
    
    transform: translate3d(0px, -1px, 0px);
    border-radius: 6px;
}

.nav-link{
    text-decoration: none;
    color: var(--primary-text);
    padding: 5px;
}

Button.bt-nav-link{
    padding: 0px;
    
    
}
Button.bt-nav-link:hover{
    background: var(--primary-light);
}


.nav-link:hover{
    text-decoration: none;
    
}

.nav-link-active{
    text-decoration: none;
    color: var(--primary-dark);
    background-color: var(--primary-light);
    padding: 5px;
    border-radius: 4px;
    width: 100%;
}

.nav-link-active:hover{
    text-decoration: none;
    background-color: var(--primary-color);
    color:white;
}

.bt-nav-link-dropdown{
    padding: 5px !important;
    border-radius: 4px;
    color: var(--primary-text) !important;
}
div.dark .bt-nav-link-dropdown{

    color: var(--secondary-light) !important;
}

.bt-nav-link-dropdown:hover{
    background-color: var(--primary-light)!important;
}

div.dark .bt-nav-link-dropdown:hover{
    color: var(--primary-light) !important;
    background-color: var(--primary-color)!important;
}

.nav-links{
    padding-left: 2em;
    display: flex;
    flex-direction: row;
    list-style-type: none;
    margin-right: auto;
}

.sign-buttons{
    display: flex;
    justify-content: space-between;
    height: 40px;
    align-items: center;
    flex-direction: row;
    align-content: center;
}

.nav-button{
    width: 78px;
    min-width: auto !important;
    padding-right: 20px !important;
    margin-left: 5px !important;
    margin-right: 5px !important;
    padding-left: 20px !important;
}

.nav-button-login{
    width: 70px;
    min-width: auto !important;
    padding-right: 20px !important;
    margin-left: 5px !important;
    margin-right: 5px !important;
    padding-left: 20px !important;
}


label.nav-username{
    margin-right: 10px;
    margin-left: 10px;
}

.nav-profilepicture{
    height: 40px;
    width: 40px;
    align-self: center;
    object-fit: cover;
    border-radius: 50%;
    margin-right: 10px;
    margin-left: 10px;
}



li{
    padding-left: 5px;
    padding-right: 5px;
    color: inherit;
}

.toggler {
    margin:0px !important;
    height:fit-content;
}

